[project]
name = "coldrec"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch >= 1.11.0",
    "faiss-gpu",
    "pandas >= 2.0.3",
    "numpy < 2.0",
    "scikit-learn >= 1.3.2",
    "optuna >= 3.6.1",
    "rich>=14.1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "UP008", # Use `super()` instead of `super(__class__, self)`
]
